# Cooking_Sandbox

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-publish-image.yml  build.yml  linitng.yml  linting.yml  testing.yml
frontend/src/: App.css  App.jsx
requirements/: requirements.txt
src/: main.py  models.py  settings.py
src/constants/: recipie_tags.py
src/db/: init_azure_dbs.py
