[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"


# -------------------
# Ruff Configuration
# -------------------
[tool.ruff]
# Directories or files to lint
src = ["src"]

# Base rule sets to enable
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # flake8-bugbear (common logic bugs)
    "I",    # isort-like import sorting
    "UP",   # pyupgrade (modernize syntax)
    "N",    # pep8-naming
]

# Rules to ignore (disable any noisy or project-specific ones)
ignore = [
    "E501", "N805",  # line length — handled by formatter (Black or Ruff format)
]

# Max line length (keep in sync with Black if you use it)
line-length = 100

# Target Python version
target-version = "py312"

# Automatically fix import order and simple issues
fix = true

# Exclude common folders
exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "migrations",
    "tests",
]


# -------------------
# Ruff Per-file Ignores (optional)
# -------------------
# Example: disable assert warnings for test files
[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]


# -------------------
# Mypy Configuration
# -------------------
[tool.mypy]
python_version = "3.12"

# Tell mypy where your source code lives (important for imports)
mypy_path = ["src"]

# Enforce strong typing
strict = true

# Allow gradual typing (so you can type modules incrementally)
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

# Ignore missing stubs for 3rd-party packages
ignore_missing_imports = true

# Warns about unused 'ignore' comments
warn_unused_ignores = true

# Warn about returning Any / untyped calls
warn_return_any = true
warn_unreachable = true

# Make output more readable in CI
pretty = true
show_error_codes = true
color_output = true

# Optional: cache to speed up repeated runs
cache_dir = ".mypy_cache"